[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/round 2p.png" type="Texture" id=1]
[ext_resource path="res://assets/round 3p.png" type="Texture" id=2]
[ext_resource path="res://assets/round 1p.png" type="Texture" id=3]
[ext_resource path="res://Round.gd" type="Script" id=4]

[node name="Round" type="Node2D"]
position = Vector2( 0, -400 )
script = ExtResource( 4 )

[node name="round_1" type="Sprite" parent="."]
position = Vector2( 500, 0 )
scale = Vector2( 0.428385, 0.428385 )
texture = ExtResource( 3 )

[node name="round_2" type="Sprite" parent="."]
position = Vector2( 500, 0 )
scale = Vector2( 0.428, 0.428 )
texture = ExtResource( 1 )

[node name="round_3" type="Sprite" parent="."]
position = Vector2( 500, 0 )
scale = Vector2( 0.428, 0.428 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
